--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gradient-primary">
+<div class="bagckgrounddrop">
 
   <div class="container">
 
@@ -15,7 +15,7 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Bienvenido a Pepeganga!</h1>
+                    <h1 class="h4 text-gray-900 mb-4">¡Bienvenido a Bee Seller!</h1>
                   </div>
 
                   <div *ngIf="badCredentials" class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -40,7 +40,7 @@
                     <div class="form-group">
                       <input [class.is-invalid]="fieldNotValid('email')" formControlName="email"
                         class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp"
-                        placeholder="Correo..." required  autofocus>
+                        placeholder="Correo" required  autofocus>
                       <div *ngIf="fieldNotValid('email') && email.errors?.email" class="invalid-feedback">
                         <strong  class="ml-3">
                           Su correo no es válido.
@@ -54,7 +54,7 @@
                     </div>
                     <div class="form-group">
                       <input [class.is-invalid]="fieldNotValid('password')" type="password" formControlName="password" class="form-control form-control-user" id="exampleInputPassword"
-                        placeholder="Contraseña..." required>
+                        placeholder="Contraseña" required>
 
                         <div *ngIf="fieldNotValid('password') && password.errors.required" class="invalid-feedback">
                           <strong class="ml-3">
@@ -81,12 +81,12 @@
                     </div>
 
                     <button [disabled]="!registerForm.valid" type="submit" class="btn btn-primary btn-user btn-block">
-                      <i *ngIf="loading" class="fas fa-spin fa-spinner fa-2x ml-2"></i> {{loginIntoText}}
+                      <i *ngIf="loading" class="fas fa-spin fa-spinner fa-2x ml-2"></i> <span>Ingresar</span>
                     </button>
                   </form>
                   <hr>
                   <div class="text-center">
-                    <a class="small" routerLink="/auth/forgot">Has olvidado tu contraseña?</a>
+                    <a class="small" routerLink="/auth/forgot">¿Has olvidado tu contraseña?</a>
                   </div>
                 </div>
               </div>
