cambios de tipografía, colores, logo

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -100,4 +100,11 @@
 
   </div>
 
+  
+    <div class="footer-container">
+      
+      <p>Copyright © Bee Seller SAS 2023</p>
+    </div>
+  
+
 </div>
