--- a/src/app/auth/forgot-password/forgot-password.component.css
+++ b/src/app/auth/forgot-password/forgot-password.component.css
@@ -1,6 +1,12 @@
-.bg-gradient-primary {
+/*.bg-gradient-primary {
   background-color: #0c46ef;
   background-image: linear-gradient(180deg, #3f4a6b 10%, #224abe 100%);
   background-size: cover;
   height: 920px;
+}*/
+
+.bagckgrounddrop {
+  background-image: url('C:\Users\brian\OneDrive\Escritorio\BEE SELLER\Logos\backgroundrop.png');
+  background-size: cover;
+  background-position: center;
 }
