nuevos cambios a pantalla de login y forgotpass

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -5,66 +5,74 @@
     <!-- Outer Row -->
     <div class="row justify-content-center">
 
-      <div class="col-xl-10 col-lg-12 col-md-9 py-5">
+      <div class="col-xl-10 col-lg-12 col-md-9 ">
 
         <div class="card o-hidden border-0 shadow-lg my-5">
           <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
             <div class="row">
-              <div class="col-lg-6 d-none d-lg-block bg-password-image"></div>
-              <div class="col-lg-6">
+              <div class="col-lg-6 d-none d-lg-block bg-login-image border-icon">
+                <div class="logo-container text-center">
+                  <img src="assets/img/BeeSeller-07.png" class="w-50 text-center" />
+                  <p class="text-center pdrop">Dropshipping</p>
+                </div>
+              </div>
+              <div class="col-lg-6 bg-login-image">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-2">Has olvidado tu contraseña?</h1>
-                    <p class="mb-4">Lo entendemos, pasan cosas. Simplemente ingrese su dirección de correo electrónico a continuación y le enviaremos un enlace para restablecer su contraseña!</p>
+                    <h1 class="h4 text-gray-900 mb-2">¿Has olvidado tu contraseña?</h1>
+                    <p class="mb-4">Lo entendemos, pasan cosas. Simplemente ingrese su dirección de correo electrónico a
+                      continuación y le enviaremos un enlace para restablecer su contraseña!</p>
                   </div>
 
-                  <div *ngIf="sendEmailResponse === 'userNotEnabled'" class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <strong>Malas noticias:</strong> Su usuario se encuentra inhabilitado temporalmente, por favor contacte con el administrador!
+                  <div *ngIf="sendEmailResponse === 'userNotEnabled'"
+                    class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>Malas noticias:</strong> Su usuario se encuentra inhabilitado temporalmente, por favor
+                    contacte con el administrador!
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
 
-                  <div *ngIf="sendEmailResponse === 'sent'" class="alert alert-success alert-dismissible fade show" role="alert">
+                  <div *ngIf="sendEmailResponse === 'sent'" class="alert alert-success alert-dismissible fade show"
+                    role="alert">
                     Se envío un correo con instrucciones para cambiar su contraseña!
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
-                  <div *ngIf="sendEmailResponse === 'error' || sendEmailResponse === 'tokenNotSaved'" class="alert alert-danger alert-dismissible fade show" role="alert">
+                  <div *ngIf="sendEmailResponse === 'error' || sendEmailResponse === 'tokenNotSaved'"
+                    class="alert alert-danger alert-dismissible fade show" role="alert">
                     <strong>Malas noticias</strong> ha ocurrido un error, por favor contacte con el administrador!
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
-                  <div *ngIf="sendEmailResponse === 'userNotFound'"  class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <strong>Malas noticias:</strong> Su usuario no se encuentra en el sistema, por favor contacte con el administrador!
+                  <div *ngIf="sendEmailResponse === 'userNotFound'"
+                    class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>Malas noticias:</strong> Su usuario no se encuentra en el sistema, por favor contacte con el
+                    administrador!
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
 
-                  <form
-                  [formGroup]="forgotForm"
-                  (ngSubmit)="sendEmail()"
-                  class="user">
+                  <form [formGroup]="forgotForm" (ngSubmit)="sendEmail()" class="user">
                     <div class="form-group">
-                      <input
-                      formControlName="email"
-                      required
-                      type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Introduzca la dirección de correo electrónico...">
+                      <input formControlName="email" required type="email" class="form-control form-control-user"
+                        id="exampleInputEmail" aria-describedby="emailHelp"
+                        placeholder="Introduzca la dirección de correo electrónico...">
                     </div>
 
 
                     <button [disabled]="!forgotForm.valid" type="submit" class="btn btn-primary btn-user btn-block">
                       <i *ngIf="loadingButton" class="fas fa-spin fa-spinner fa-2x ml-2"></i>
-                     <span *ngIf="!loadingButton"> Cambiar contraseña</span>
+                      <span *ngIf="!loadingButton"> Cambiar contraseña</span>
                     </button>
                   </form>
                   <hr>
                   <div class="text-center">
-                    <a class="small" routerLink="/auth">Ya tienes una cuenta? Entra!</a>
+                    <a class="small" routerLink="/auth">¿Ya tienes una cuenta? Ingresa!</a>
                   </div>
                 </div>
               </div>
@@ -77,5 +85,9 @@
     </div>
 
   </div>
+  <div class="">
+    <img class="w-100 footer-container" src="assets/img/apoyan.png" />
+  </div>
+  <p style="text-align:center; margin-top: 11px;">Copyright © Bee Seller SAS 2023</p>
+  <br><br><br>
 </div>
-
