Icons has been changed

--- a/src/app/home/components/sidebard/sidebard.component.html
+++ b/src/app/home/components/sidebard/sidebard.component.html
@@ -6,7 +6,7 @@
     <div class="sidebar-brand-icon rotate-n-15">
       <img class="img-profile rounded-circle logo-size" [src]="logoSrc">
     </div>
-    <div class="sidebar-brand-text mx-3">Pepeganga</div>
+    <div class="sidebar-brand-text mx-3">Bee Seller</div>
   </a>
 
   <!-- Divider -->
