Se establecen banners de logos para desktop y mobile

--- a/src/assets/css/sb-admin-2.css
+++ b/src/assets/css/sb-admin-2.css
@@ -563,6 +563,9 @@ pre code {
   .container {
     max-width: 540px;
   }
+  .footer-container {
+    content: url("../img/Apoyan-sm.png");
+  }
 }
 
 @media (min-width: 768px) {
