Cambio al color de fondo del navbar

--- a/src/app/home/pages/home/home.component.html
+++ b/src/app/home/pages/home/home.component.html
@@ -29,7 +29,7 @@
           <footer class="sticky-footer bg-white">
             <div class="container my-auto">
               <div class="copyright text-center my-auto">
-                <span>Copyright &copy; Pepeganga {{year}}</span>
+                <span>Copyright © Bee Seller SAS 2023</span>
               </div>
             </div>
           </footer>
