--- a/src/app/home/components/sidebard/sidebard.component.html
+++ b/src/app/home/components/sidebard/sidebard.component.html
@@ -1,12 +1,12 @@
  <!-- Sidebar -->
- <ul #sidebarItem class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+ <ul #sidebarItem class="navbar-nav bg-navbar sidebar sidebar-dark accordion" id="accordionSidebar">
 
   <!-- Sidebar - Brand -->
   <a class="sidebar-brand d-flex align-items-center justify-content-center" routerLink="/home">
     <div class="sidebar-brand-icon rotate-n-15">
       <img class="img-profile rounded-circle logo-size" [src]="logoSrc">
     </div>
-    <div class="sidebar-brand-text mx-3">Bee Seller</div>
+   <!-- <div class="sidebar-brand-text mx-3">Bee Seller</div> -->
   </a>
 
   <!-- Divider -->
