--- a/src/assets/css/sb-admin-2.css
+++ b/src/assets/css/sb-admin-2.css
@@ -9675,6 +9675,10 @@ a:focus {
   background-size: cover;
 }
 
+.bg-navbar {
+  background-color: #202124;
+}
+
 .bg-gradient-secondary {
   background-color: #858796;
   background-image: linear-gradient(180deg, #858796 10%, #60616f 100%);
