--- a/src/app/home/components/sidebard/sidebard.component.html
+++ b/src/app/home/components/sidebard/sidebard.component.html
@@ -3,11 +3,12 @@
 
   <!-- Sidebar - Brand -->
   <a class="sidebar-brand d-flex align-items-center justify-content-center" routerLink="/home">
-    <div class="sidebar-brand-icon rotate-n-15">
-      <img class="img-profile rounded-circle logo-size" [src]="logoSrc">
+    <div class="sidebar-brand-icon ">
+      <img class=" logo-size" src= "assets/img/Bee-horizontal-black.png">
     </div>
    <!-- <div class="sidebar-brand-text mx-3">Bee Seller</div> -->
   </a>
+  <p class="sidebar-drop">Dropshipping</p>
 
   <!-- Divider -->
   <hr class="sidebar-divider my-0">
