--- a/src/app/home/pages/home/store/products-store/products-store.component.html
+++ b/src/app/home/pages/home/store/products-store/products-store.component.html
@@ -170,11 +170,20 @@
         <tbody>
           <tr *ngFor="let product of pageProducts.itemsGrid">
             <td>
-              <div class="custom-control custom-checkbox small">
-                <input type="checkbox" [ngModel]="product.selected" (change)="selectProduct(product)"
-                  class="custom-control-input" [id]="'check' + product.sku">
-                <label class="custom-control-label" [for]="'check' + product.sku"></label>
-              </div>
+              <ng-container *ngIf="product.currentStock; else elseTemplate">
+                <div class="custom-control custom-checkbox small">
+                  <input type="checkbox" [ngModel]="product.selected" (change)="selectProduct(product)"
+                    class="custom-control-input" [id]="'check' + product.sku">
+                  <label class="custom-control-label" [for]="'check' + product.sku"></label>
+                </div>
+              </ng-container>
+              <ng-template #elseTemplate>
+                <div class="custom-control custom-checkbox small">
+                  <input type="checkbox" [ngModel]="product.selected" disabled
+                    class="custom-control-input" [id]="'check' + product.sku">
+                  <label class="custom-control-label" [for]="'check' + product.sku"></label>
+                </div>
+              </ng-template>
             </td>
             <td>
               <img class="img-fluid rounded" width="50px" height="50px" [src]="product.images |uploadImage" alt="Imagen">
