Cambios en la terminología de Almacén Bee Seller

--- a/src/app/home/pages/home/store/products-store/products-store.component.html
+++ b/src/app/home/pages/home/store/products-store/products-store.component.html
@@ -161,8 +161,8 @@
             <th>SKU</th>
             <th>Familia</th>
             <th>Categoría</th>
-            <th>Precio</th>
-            <th class="text-right">Cantidad</th>
+            <th>Costo BS</th>
+            <th class="text-right">Stock</th>
             <th class="text-center">Ubicación</th>
           </tr>
         </thead>
