Cambios en la terminología de Mis productos

--- a/src/app/home/pages/home/my-products/publish-myproducts/publish-myproducts.component.html
+++ b/src/app/home/pages/home/my-products/publish-myproducts/publish-myproducts.component.html
@@ -121,8 +121,8 @@
             <th>Nombre</th>
             <th>SKU</th>
             <th>Familia</th>
-            <th>Precio publicación</th>
-            <th>Cantidad</th>
+            <th>Costo BS</th>
+            <th>Stock</th>
             <th>Estado</th>
             <th class="text-right">Acción</th>
           </tr>
