Cambios en la terminología de Productos publicados

--- a/src/app/home/pages/home/my-products/published-product/published-product.component.html
+++ b/src/app/home/pages/home/my-products/published-product/published-product.component.html
@@ -147,14 +147,14 @@
               </div>
             </th>
             <th>Imagen</th>
-            <th>Título</th>
+            <th>Nombre</th>
             <th>Última actualización</th>
             <th>Meli Id</th>
             <th>SKU</th>
             <th>Estado</th>
             <th>Flex</th>
             <th>Precio</th>
-            <th>Cantidad</th>
+            <th>Stock</th>
             <th>Cuenta de Meli</th>
             <th class="text-right">Acción</th>
           </tr>
