Se quita la opción de habilitar garantía

--- a/src/app/home/pages/home/my-products/edit-products/edit-products.component.html
+++ b/src/app/home/pages/home/my-products/edit-products/edit-products.component.html
@@ -288,9 +288,9 @@
               <div class="col-md-6 izq-aling">
 
 
-  <!--                     -->
+  <!--     
 
-                <div class="form-group row mb-2">
+               <!-- <div class="form-group row mb-2">
                   <div class="col-md-4 izq-aling">
                     <div class="row mb-2 label-wrapper">
                       <div class="col-md-8"><label class="control-label" for="Warranty" title="">Garantía</label></div>
@@ -324,7 +324,7 @@
                         name="warrantyTime" id="warrantyTime" [disabled]="!warranty">
                     <span class="field-validation-valid" data-valmsg-for="warrantyTime" data-valmsg-replace="true"></span>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="form-group row mb-2" style="margin-top: 2rem;">
                   <div class="col-md-4 izq-aling">
