--- a/src/app/home/pages/home/dashboard/components/stock-vs-total/stock-vs-total.component.html
+++ b/src/app/home/pages/home/dashboard/components/stock-vs-total/stock-vs-total.component.html
@@ -3,33 +3,18 @@
     <div class="row no-gutters align-items-center">
       <div class="col mr-2 animated--grow-in">
         <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
-          Productos stock vs total
+          Stock de productos 
         </div>
         <div class="row no-gutters align-items-center">
           <div class="col-auto">
             <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">
-              {{ withStock + "-" + total }}
+              {{ withStock }}
             </div>
           </div>
-          <div class="col">
-            <div class="progress progress-sm mr-2">
-              <div
-                class="progress-bar bg-info"
-                role="progressbar"
-                [style.width]="percent"
-                aria-valuenow="40"
-                aria-valuemin="0"
-                aria-valuemax="100"
-              ></div>
-            </div>
-          </div>
+          
         </div>
       </div>
-      <div class="col-auto">
-        <div class="h5 mb-0  mt-sm-4 mt-md-3 mr-1 font-weight-bold text-gray-800">
-          {{ percent }}
-        </div>
-      </div>
+      
     </div>
   </div>
 </div>
