--- a/src/app/home/components/sidebard/sidebard.component.html
+++ b/src/app/home/components/sidebard/sidebard.component.html
@@ -17,7 +17,7 @@
   <hr class="sidebar-divider my-0">
 
   <!-- Nav Item - Dashboard -->
-  <li class="nav-item active">
+  <li class="nav-item ">
     <a class="nav-link"
     routerLink="/home/dashboard"
     routerLinkActive="active"
@@ -27,15 +27,16 @@
       <span [hidden]="toggled" class="ml-2">Tablero de control</span></a>
   </li>
   <hr class="sidebar-divider my-0">
-  <!--<li class="nav-item">
-    <a routerLinkActive="active" class="nav-link collapsed" href="#"  data-toggle="collapse" [attr.data-target]="'#test'+4" aria-expanded="true" [attr.aria-controls]="'test'+4">
-      <i [class]="adminItem.icon"></i>
-      <span [hidden]="toggled" class="ml-2">{{ adminItem.title }}</span>
+
+  <li class="nav-item">
+    <a routerLinkActive="active" class="nav-link collapsed" href="#"  data-toggle="collapse" [attr.data-target]="'#test'+1" aria-expanded="true" [attr.aria-controls]="'test'+1">
+      <i [class]="sidebarService.configuracionMenu.icon"></i>
+      <span [hidden]="toggled" class="ml-2">{{ sidebarService.configuracionMenu.title }}</span>
     </a>
-    <div  [id]="'test'+4" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar" >
+    <div  [id]="'test1'" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar" >
       <div class="bg-white py-2 collapse-inner rounded">
-        <h6  class="collapse-header">{{ adminItem.subtitle }}</h6>
-        <div *ngFor="let subitem of adminItem.submenu" >
+        <h6  class="collapse-header">{{ sidebarService.configuracionMenu.subtitle }}</h6>
+        <div *ngFor="let subitem of sidebarService.configuracionMenu.submenu" >
 
           <a class="collapse-item" *ngIf="sidebarService.hashRoles(subitem.roles)" [routerLink]="subitem.url" >
             {{ subitem.title }}
@@ -44,28 +45,30 @@
 
       </div>
     </div>
-
-  <hr  [class]="adminItem.divider">
- </li> -->
-  <!--<li class="nav-item active">
+  </li>
+  <hr class="sidebar-divider my-0">
+ 
+  <li class="nav-item ">
     <a class="nav-link"
     routerLink="/home/store"
     routerLinkActive="active"
     *ngIf="sidebarService.hashRoles(['ROLE_ADMIN', 'ROLE_SELLER', 'ROLE_INVITED'])"
     >
-      <i class="fas fa-fw fa-tachometer-alt"></i>
+      <i class="fas fa-warehouse"></i>
       <span [hidden]="toggled" class="ml-2">Almacén Bee Seller</span></a>
   </li>
+  <hr class="sidebar-divider my-0">
+
 
   <li class="nav-item">
-    <a routerLinkActive="active" class="nav-link collapsed" href="#"  data-toggle="collapse" [attr.data-target]="'#test'+4" aria-expanded="true" [attr.aria-controls]="'test'+4">
-      <i [class]="productItem.icon"></i>
-      <span [hidden]="toggled" class="ml-2">{{ productItem.title }}</span>
+    <a routerLinkActive="active" class="nav-link collapsed" href="#"  data-toggle="collapse" [attr.data-target]="'#test'+2" aria-expanded="true" [attr.aria-controls]="'test'+2">
+      <i [class]="sidebarService.misproductosMenu.icon"></i>
+      <span [hidden]="toggled" class="ml-2">{{ sidebarService.misproductosMenu.title }}</span>
     </a>
-    <div  [id]="'test'+4" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar" >
+    <div  [id]="'test2'" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar" >
       <div class="bg-white py-2 collapse-inner rounded">
-        <h6  class="collapse-header">{{ productItem.subtitle }}</h6>
-        <div *ngFor="let subitem of productItem.submenu" >
+        <h6  class="collapse-header">{{ sidebarService.misproductosMenu.subtitle }}</h6>
+        <div *ngFor="let subitem of sidebarService.misproductosMenu.submenu" >
 
           <a class="collapse-item" *ngIf="sidebarService.hashRoles(subitem.roles)" [routerLink]="subitem.url" >
             {{ subitem.title }}
@@ -74,47 +77,23 @@
 
       </div>
     </div>
-
-  <hr  [class]="productItem.divider">
- </li>
-
-  <li class="nav-item active">
-    <a class="nav-link"
-    routerLink="/home/dashboard"
-    routerLinkActive="active"
-    *ngIf="sidebarService.hashRoles(['ROLE_ADMIN', 'ROLE_SELLER'])"
-    >
-      <i class="fas fa-fw fa-tachometer-alt"></i>
-      <span [hidden]="toggled" class="ml-2">Ventas</span></a>
   </li>
+  <hr class="sidebar-divider my-0">
 
- 
-  <hr class="sidebar-divider"> -->
-    <!-- Nav Item - Pages Collapse Menu -->
-  <li class="nav-item" *ngFor="let item of sidebarService.storeMenu; let i=index">
-    <a routerLinkActive="active" class="nav-link collapsed" href="#"  data-toggle="collapse" [attr.data-target]="'#test'+i" aria-expanded="true" [attr.aria-controls]="'test'+i">
-      <i [class]="item.icon"></i>
-      <span [hidden]="toggled" class="ml-2">{{ item.title }}</span>
-    </a>
-    <div  [id]="'test'+i" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar" >
-      <div class="bg-white py-2 collapse-inner rounded">
-        <h6  class="collapse-header">{{ item.subtitle }}</h6>
-        <div *ngFor="let subitem of item.submenu" >
-
-          <a class="collapse-item" *ngIf="sidebarService.hashRoles(subitem.roles)" [routerLink]="subitem.url" >
-            {{ subitem.title }}
-          </a>
-        </div>
-
-      </div>
-    </div>
- <!-- Divider -->
-  <hr  [class]="item.divider">
- </li>
+ <li class="nav-item ">
+  <a class="nav-link"
+  routerLink="/home/seller-orders"
+  routerLinkActive="active"
+  *ngIf="sidebarService.hashRoles(['ROLE_ADMIN', 'ROLE_SELLER'])"
+  >
+    <i class="fas fa-dollar-sign ml-2"></i>
+    <span [hidden]="toggled" class="ml-2">Ventas</span></a>
+</li>
+<hr class="sidebar-divider my-0">
 
   <!-- Sidebar Toggler (Sidebar) -->
   <div  class="text-center d-none d-md-inline">
-    <button class="rounded-circle border-0" id="sidebarToggle" (click)="toggled=!toggled"></button>
+    <button class="rounded-circle border-0 mt-4" id="sidebarToggle" (click)="toggled=!toggled"></button>
   </div>
 
 </ul>
