--- a/src/app/home/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/home/components/breadcrumbs/breadcrumbs.component.html
@@ -1,8 +1,9 @@
   <!-- Page Heading -->
   <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">{{ title }}</h1>
-    <a *ngIf="url === 'publish-myproducts'" routerLink="/home/published-products" class="nav-link active"><i class="fas fa-share"></i> Ir a Productos Publicados </a>
+  <!--  <a *ngIf="url === 'publish-myproducts'" routerLink="/home/published-products" class="nav-link active"><i class="fas fa-share"></i> Ir a Productos Publicados </a>
     <a *ngIf="url === 'published-products'" routerLink="/home/publish-myproducts" class="nav-link active nav-published-products"><i class="fas fa-reply"></i> Ir a Mis productos </a>
+    -->
+    <h1 class="h3 mb-0 text-gray-800">{{ title }}</h1>
     <!-- <a *ngIf="false" href="" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50 m-1"></i>Exportar</a> -->
     <div *ngIf="url === 'published-products'">
       <a class="dropdown-toggle d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" href="javascript:void(0);" (click)="comboChanged()" role="button" id="dropdownMenuLink"
