--- a/src/app/home/pages/home/home.component.html
+++ b/src/app/home/pages/home/home.component.html
@@ -14,7 +14,7 @@
         <!-- Begin Page Content -->
         <div class="container-fluid">
 
-        <app-breadcrumbs></app-breadcrumbs>
+        <!--<app-breadcrumbs></app-breadcrumbs> -->
 
         <router-outlet></router-outlet>
 
