--- a/src/app/home/components/sidebard/sidebard.component.html
+++ b/src/app/home/components/sidebard/sidebard.component.html
@@ -80,16 +80,25 @@
   </li>
   <hr class="sidebar-divider my-0">
 
- <li class="nav-item ">
-  <a class="nav-link"
-  routerLink="/home/seller-orders"
-  routerLinkActive="active"
-  *ngIf="sidebarService.hashRoles(['ROLE_ADMIN', 'ROLE_SELLER'])"
-  >
-    <i class="fas fa-dollar-sign ml-2"></i>
-    <span [hidden]="toggled" class="ml-2">Ventas</span></a>
-</li>
-<hr class="sidebar-divider my-0">
+  <li class="nav-item">
+    <a routerLinkActive="active" class="nav-link collapsed" href="#"  data-toggle="collapse" [attr.data-target]="'#test'+3" aria-expanded="true" [attr.aria-controls]="'test'+3">
+      <i [class]="sidebarService.ventas.icon"></i>
+      <span [hidden]="toggled" class="ml-2">{{ sidebarService.ventas.title }}</span>
+    </a>
+    <div  [id]="'test3'" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar" >
+      <div class="bg-white py-2 collapse-inner rounded">
+        <h6  class="collapse-header">{{ sidebarService.ventas.subtitle }}</h6>
+        <div *ngFor="let subitem of sidebarService.ventas.submenu" >
+
+          <a class="collapse-item" *ngIf="sidebarService.hashRoles(subitem.roles)" [routerLink]="subitem.url" >
+            {{ subitem.title }}
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </li>
+  <hr class="sidebar-divider my-0">
 
   <!-- Sidebar Toggler (Sidebar) -->
   <div  class="text-center d-none d-md-inline">
