cambios en el header y title

--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -4,7 +4,7 @@
   <button id="sidebarToggleTop"  class="btn btn-link d-md-none rounded-circle mr-3">
     <i class="fa fa-bars"></i>
   </button>
-  <div class="">
+  <div class="mth">
     <app-breadcrumbs></app-breadcrumbs>
   </div>
   
