--- a/src/app/home/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/home/components/breadcrumbs/breadcrumbs.component.html
@@ -6,12 +6,12 @@
     <h1 class="h3 mb-0 text-gray-800">{{ title }}</h1>
     <!-- <a *ngIf="false" href="" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50 m-1"></i>Exportar</a> -->
     <div *ngIf="url === 'published-products'">
-      <a class="dropdown-toggle d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" href="javascript:void(0);" (click)="comboChanged()" role="button" id="dropdownMenuLink"
+     <!-- <a class="dropdown-toggle d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" href="javascript:void(0);" (click)="comboChanged()" role="button" id="dropdownMenuLink"
         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-download fa-sm text-white-50 m-1"></i>
         Exportar
         <i class="fas fa-ellipsis-v fa-sm fa-fw"></i>
-      </a>
+      </a> -->
       <div *ngIf="all" class="dropdown-menu dropdown-menu-right shadow animated--fade-in btn-block"
         aria-labelledby="dropdownMenuLink">
         <a *ngIf="selected" class="dropdown-item pointer" (click)="exportData(1)" href="javascript:void(0);" ><i class="fas fa-download fa-sm color-export m-1"></i>
